--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/012b6cbaec.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__logo">
+            <a href="#">
+                <i class="fab fa-youtube"></i>
+                <span>Youtube</span>
+            </a>
+        </div>
+        <div class="header__right">
+            <a href="#">
+                <i class="fas fa-user-circle"></i>
+            </a>
+        </div>
+    </header>
+    <main class="main">
+        <div class="main__video-block">
+            <div class="video-block__container">
+                <video src="./videos/Js drag & drop - Chrome 2020-09-27 20-54-43.mp4"></video>
+            </div>
+            <div class="video-block__controls">
+                <div class="controls__progress"></div>
+                <div class="controls__panel"></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
