added messy text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="controls__panel"></div>
             </div>
         </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid sit eum ratione quisquam, dolorum ipsam, cum alias labore vero nostrum deleniti ipsum nihil explicabo recusandae, itaque qui ea quo debitis?</p>
     </main>
 </body>
 </html>
