--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="main">
         <div class="main__video-block">
             <div class="video-block__container">
-                <video src="./videos/Js drag & drop - Chrome 2020-09-27 20-54-43.mp4"></video>
+                <video src="./videos/wlzjs.mp4" id="jsVideo"></video>
             </div>
             <div class="video-block__controls">
                 <div class="controls__progress">
@@ -32,8 +32,13 @@
                 </div>
                 <div class="controls__panel">
                    <div class="panel__left">
-                        <button class="panel__play-btn"><i class="fas fa-play"></i></button>
-                        <button class="panel__volume-btn"><i class="fas fa-volume-up"></i></button>
+                        <button class="panel__play-btn" id="jsPlayBtn"><i class="fas fa-play"></i></button>
+                        <div class="panel__volume-container">
+                            <button class="panel__volume-btn" id="jsVolumeBtn"><i class="fas fa-volume-up"></i></button>
+                            <div class="panel__volume-input">
+                                <input id="jsVolumeRange" type="range" min="0" max="1" step="0.1" value="0.5">
+                            </div>
+                        </div>
                         
                         <button class="panel__backward-btn"><i class="fas fa-backward"></i></button>
                         <button class="panel__forward-btn"><i class="fas fa-forward"></i></button>
@@ -53,5 +58,7 @@
             </div>
         </div>
     </main>
+
+    <script src="./assets/scripts.js"></script>
 </body>
 </html>
