--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="main__video-block">
             <div class="video-block__container">
                 <video src="./videos/wlzjs.mp4" id="jsVideo"></video>
+                <p>lalala</p>
             </div>
             <div class="video-block__controls">
                 <div class="controls__progress">
