--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                             <span class="time__current">0:13</span>
                             |
                             <span class="time__duration">14:13</span>
+                            <p>nonono</p>
                         </div>
                    </div>
                    <div class="panel__right">
