--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="main">
         <div class="main__video-block" id="jsVideoBlock">
             <div class="video-block__container" >
-                <video src="./videos/wlzjs.mp4" id="jsVideo"></video>
+                <video src="./videos/goodMusic.webm" id="jsVideo"></video>
                 <div class="video-block__controls" id="jsControls">
                     <div class="controls__option hide" id="jsOptionMenu">
                         <h2>재생속도</h2>
@@ -52,8 +52,8 @@
                                 </div>
                             </div>
                             
-                            <button class="panel__backward-btn" data-sec="5" id="jsBackward"><i class="fas fa-backward"></i></button>
-                            <button class="panel__forward-btn" data-sec="5" id="jsForward"><i class="fas fa-forward"></i></button>
+                            <button class="panel__backward-btn" data-sec="-5"><i class="fas fa-backward"></i></button>
+                            <button class="panel__forward-btn" data-sec="5"><i class="fas fa-forward"></i></button>
                             <div class="panel__time">
                                 <span class="time__current" id="jsCurrent">00:00:00</span>
                                 |
